# athena2

./: .gitignore  README.md  pyproject.toml  requirements.txt
informer/exp/: exp_informer.py
notebooks/: 01_eda.ipynb  02_eda.ipynb  poc_analysis.ipynb
outputs/tables/: lstm_results.csv  patchtst_results.csv
reports/: poc_report.pptx
scripts/: eda_01_overview.py  eda_02_periodicity.py  eda_03_correlation.py  eda_04_stationarity.py  model_01_baseline.py  model_02_ml.py  model_03_lstm.py  model_04_patchtst.py  model_05_informer.py  run_720_experiments.py  run_generalization.py  scale_verification.py  step2_recursive.py  step2_visualization.py  step3_comparison.py  step3_lstm.py  step3_patchtst.py
scripts/scenario_a/: model_01_baseline_a.py  model_02_ml_a.py  model_03_lstm_a.py  summary_a.md
